--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "firebase": "^12.6.0",
+    "firebase-admin": "^13.6.0",
+    "firebase-frameworks": "^0.4.2",
+    "firebase-functions": "^7.0.0",
     "next": "16.0.1",
     "react": "19.2.0",
     "react-dom": "19.2.0"
