--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "firebase-admin": "^13.6.0",
     "firebase-frameworks": "^0.4.2",
     "firebase-functions": "^7.0.0",
+    "framer-motion": "^12.23.24",
     "next": "16.0.1",
     "react": "19.2.0",
     "react-dom": "19.2.0"
